deploy/k8s/alert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alerts-api
  labels:
    app: alerts
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alerts
  template:
    metadata:
      labels:
        app: alerts
    spec:
      containers:
        - name: alerts-api
          image: johnny711dock/alerts:latest
          ports:
            - containerPort: 8080
