deploy/k8s/kafka-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.7.0
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka/data
          livenessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: 9092
            initialDelaySeconds: 90
            periodSeconds: 15
            failureThreshold: 5
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc
