deploy/k8s/alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerts-service
spec:
  selector:
    app: alerts
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
