deploy/k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka # This name is used in KAFKA_ADVERTISED_LISTENERS
  labels:
    app.kubernetes.io/name: kafka
    app.kubernetes.io/instance: kafka
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/part-of: go-alert-system
spec:
  selector:
    # This selector must match the labels in the Kafka deployment template metadata
    app: kafka
  ports:
    - name: tcp-kafka
      port: 9092       # Port the service listens on
      targetPort: 9092 # Port the Kafka container listens on
      protocol: TCP
  type: ClusterIP # Exposes the service on a cluster-internal IP
