deploy/k8s/schema-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-schema-registry
spec:
  selector:
    app: kafka-schema-registry
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  clusterIP: None
