deploy/k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper # Service name, can be different from deployment name
spec:
  selector:
    app: zookeeper # Selects pods with the label 'app: zookeeper'
  ports:
    - protocol: TCP
      port: 2181       # Port exposed by the service
      targetPort: 2181 # Port on the pods targeted by the service
  type: ClusterIP      # Exposes the service on a cluster-internal IP
